--- a/app.json
+++ b/app.json
@@ -48,6 +48,10 @@
         "BOT_TOKEN": {
             "description": "Fill Bot Token in this var get it from telegram @botfather",
             "required": true
+        }, 
+        "BOT_USERNAME": {
+            "description": " Fill Bot Username Without {@} ", 
+            "required": true
         },            
         "API_ID": {
             "description": "telegram api id here",
