--- a/app.json
+++ b/app.json
@@ -48,7 +48,11 @@
         "BOT_TOKEN": {
             "description": "Fill Bot Token in this var get it from telegram @botfather",
             "required": true
-        },            
+        },
+        "BOT_USERNAME": {
+            "description": "Fill Bot Username in this var without [@]",
+            "required": true
+        },                        
         "API_ID": {
             "description": "telegram api id here",
             "required": true
