--- a/sample.env
+++ b/sample.env
@@ -1,14 +1,14 @@
 # ɪᴍᴘᴏʀᴛᴀɴᴛ ᴠᴀʀɪᴀʙʟᴇs ғᴏʀ ᴠᴘs ᴅᴇᴘʟᴏʏ
 
 
-# API_ID=
+API_ID=
 
-# API_HASH=
+API_HASH=
 
-# BOT_TOKEN=
+BOT_TOKEN=
 
-# BOT_USERNAME=
+BOT_USERNAME=
 
-# SUDO_USERS=
+SUDO_USERS=
 
-# SESSION=
+SESSION=
